<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/endereco"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/editIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/idade"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spinnerSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:entries="@array/sexo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/buttonCarregar"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/carregar" />
    </LinearLayout>

</android.widget.LinearLayout>